fix not showing image

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,3 @@
-.header {
-  height: 34vw;
-  margin: 30px auto;
-  background: url("./header_img.png") no-repeat;
-  background-size: contain;
-  position: relative;
-}
-
 .header-contents {
   position: absolute;
   display: flex;
